# arap-igl

./: .gitmodules  CMakeLists.txt  arap.cpp  arap.hpp  main.cpp
data/Meshes_ARAP_SA2007/: cactus_small.off
src/: Mesh.cpp  Mesh.hpp  arap.cpp  arap.hpp  arap_model.cpp  arap_model.hpp  arap_newton.cpp  arap_newton.hpp  arap_util.cpp  arap_util.hpp  gradient_descent_solver.cpp  gradient_descent_solver.hpp  main.cpp  model_solver.hpp  newton_solver.cpp  newton_solver.hpp  tao_newton.cpp  tao_newton.hpp  tao_solver.cpp  tao_solver.hpp  volume_arap_model.cpp  volume_arap_model.hpp
